postgres-deploment.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: postgres
  namespace: projectcapstone
spec:
  type: ClusterIP
  ports:
  - name: postgres-service
    port: 5432
    targetPort: 5432
  selector:
    app: db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
    role: backend
  name: postgres
  namespace: projectcapstone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
      role: backend
  template:
    metadata:
      labels:
        app: db
        role: backend
    spec:
      containers:
      - image: postgres:13.1-alpine
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
