restappfinal-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springsql
  name: springsql
  namespace: projectcapstone
spec:
  type: NodePort
  ports:
     - port: 8080
  selector:
    app: springsql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springsql
  name: springsql
  namespace: projectcapstone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springsql
      role: frontend
  template:
    metadata:
      labels:
        app: springsql
        role: frontend
    spec:
      containers:
      - image: satyasiva/projectcapstone:finalspringsql 
        name: springsql
        ports:
        - containerPort: 8080
          name: springsql
        resources:
           limits:
             cpu: 300m
